src/tests/snapshots/amber__tests__translating__div_int_shorthand.ab__bash-3.2.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "20",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                VarExpr(
                                    VarExprFragment {
                                        name: "x",
                                        global_id: Some(
                                            0,
                                        ),
                                        kind: Int,
                                        is_ref: false,
                                        is_length: false,
                                        is_quoted: true,
                                        is_array_to_string: false,
                                        is_array_ref: false,
                                        is_declared: true,
                                        is_math_var: false,
                                        render_type: BashValue,
                                        index: None,
                                        index_pos: None,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "4",
                                    },
                                ),
                            ),
                            op: Div,
                            quoted: true,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "35",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Int,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                VarExpr(
                                    VarExprFragment {
                                        name: "y",
                                        global_id: Some(
                                            1,
                                        ),
                                        kind: Int,
                                        is_ref: false,
                                        is_length: false,
                                        is_quoted: true,
                                        is_array_to_string: false,
                                        is_array_ref: false,
                                        is_declared: true,
                                        is_math_var: false,
                                        render_type: BashValue,
                                        index: None,
                                        index_pos: None,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "5",
                                    },
                                ),
                            ),
                            op: Div,
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
